# sandbox

./: .gitignore  README.md
Ansible/: packages
Ansible/ArchLinuxSetup/: packages.yml
JsonTesting/: .cproject  .project  CMakeLists.txt  setupCMake.sh
JsonTesting/forms/: JsonTesting.json  MainWindow.ui
JsonTesting/include/: MainWindow.h  ObjectParser.h
JsonTesting/src/: MainWindow.cpp  ObjectParser.cpp  README.md  main.cpp
LaTeX/AIAATemplate/: main.aux
QtProjects/C++GUI-Programming-Qt4/ChapterFollowAlong/Chapter1/1.1/: CMakeLists.txt
QtProjects/C++GUI-Programming-Qt4/ChapterFollowAlong/Chapter1/1.1/src/: main.cpp
Scripts/: DevSandboxSetup-Windows.sh
Scripts/ArgTesting/: CMakeLists.txt
Scripts/ArgTesting/src/: main.cpp
Scripts/CmdTesting/: CMakeLists.txt
Scripts/CmdTesting/src/: exec_cmd.h  main.cpp
Scripts/NewQtProject/: NewQtProject.tgz  install.sh  newQtProject.sh
Scripts/newproject/src/: exec_cmd.h  main.cpp
